--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <body style="background-color: black;">
 <h1 style="color:white; font-family:verdana;"> Welcome to the to-do list Application</h1>
-<p style="color:#f4f489; font-family:verdana;"> You have to do things. </p>
+<p style="color:#f4f489; font-family:verdana;"> Peach out. </p>
 
 <h2 style="color:white; font-family:verdana;"> Blah Blah Blah </h2>
-<a href="https://gifts.worldwildlife.org/gift-center/gifts/Species-Adoptions/Panda.aspx?sc=AWY1200WCGH1&gclid=CjwKEAjwo4jOBRDmqsavuLfl9CYSJAAFY1ox7CltIuabYXluurOpish72TA_C55mQ7HWIxjLeNebERoCVzXw_wcB">
+<a href="https://media.giphy.com/media/QoCoLo2opwUW4/giphy.gif">
 	<img src="https://pandamanblogdotcom.files.wordpress.com/2013/04/drunk-panda.jpg" alt="you're drunk go home"> </a>
 		<p style="color:#96d3f9; font-family:verdana;"> Panda Panda Panda </p>
 
